Updated client and @Null